<resources>
    <string name="app_name">Wi-Fi_Direct_based_VideoStream_ltf</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="empty"></string>
    <string name="start_record">开始录屏</string>
    <string name="stop_record">停止录屏</string>
    <string name="Chatcontents">聊天内容</string>
    <string name="Stop">停止</string>
    <string name="Pause">暂停</string>
    <string name="Play">播放</string>
    <string name="Replay">重播</string>
    <string name="RecordScreen">录屏</string>
    <string name="SendMessage">发送</string>
    <string name="Connect">connect</string>
    <string name="Heart_Beat_test">心跳</string>

    <string name="Disconnect">disconnect</string>
    <string name="Chatbutton">Surface</string>
</resources>
