<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/activatedBackgroundIndicator"
    android:orientation="vertical"
    android:padding="6dip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <SurfaceView
            android:id="@+id/surfaceView"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RecordScreen"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Play"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_pause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Pause"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Stop"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_replay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Replay"
                tools:ignore="ButtonStyle"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/chat_content"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/Chatcontents" />

        <EditText
            android:id="@+id/Sendtext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/Sendmessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SendMessage" />

    </LinearLayout>


</LinearLayout>